Resolved merge conflicts from alex into main

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Python
 *.pyc
 *.pyo
@@ -10,6 +11,8 @@ build/
 eggs/
 *.egg
 MANIFEST
+venv/
+.pytest_cache/
 
 # Django
 *.log
@@ -21,7 +24,15 @@ media/
 staticfiles/
 __pycache__/
 *.log
-venv/
+
+# temp files
+*.tmp
+*.old
+*.sync-conflict*
+temp/
+tmp/
+test_behavioral_db.sqlite3
+
 
 # IDEs
 .vscode/
@@ -37,3 +48,8 @@ venv/
 
 # Windows
 Thumbs.db
+
+
+# Personal
+TODO
+LINKS
